--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+.app-wrapper #nav {
+    margin-bottom: 0px
+}
+
+.app-wrapper main {
+    background-color: #eee;
+    width: 100%;
+    padding: 2rem;
 }
