--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,21 @@
+#root, .app-wrapper {
+    height: 100%;
+}
+
 .app-wrapper #nav {
     margin-bottom: 0px
 }
 
 .app-wrapper main {
-    background-color: #eee;
-    width: 100%;
     padding: 2rem;
+    height: 100%;
+    overflow-y: scroll;
+    padding-bottom: 4rem;
+}
+
+body {
+    height: 100%;
+    background-color: #f7f7f7;
+    width: 100%;
+    overflow: hidden;
 }
